--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-navigation": "^0.1.5",
-    "@11ty/eleventy-plugin-inclusive-language": "^1.0.0"
+    "@11ty/eleventy-plugin-inclusive-language": "^1.0.0",
+    "luxon": "^1.23.0"
   }
 }
