--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "luxon": "^1.23.0"
   },
   "dependencies": {
+    "katex": "^0.11.1",
     "markdown-it": "^10.0.0",
-    "markdown-it-footnote": "^3.0.2"
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-texmath": "^0.6.7"
   }
 }
