--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-navigation": "^0.1.5",
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.0",
-    "luxon": "^1.23.0"
+    "luxon": "^1.23.0",
+    "netlify-cli": "^2.52.0"
   },
   "dependencies": {
     "katex": "^0.11.1",
